--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -14,48 +14,6 @@
   opacity: 1;
 }
 
-.sv-ranking-item--animate-item-removing {
-  animation: sv-animate-item-removing-keyframes $ranking-animation-duration;
-}
-
-@keyframes sv-animate-item-removing-keyframes {
-  0% {
-    height: calcSize(6);
-    opacity: 1;
-  }
-
-  50% {
-    height: calcSize(6);
-    opacity: 0;
-  }
-
-  100% {
-    height: 0px;
-    opacity: 0;
-  }
-}
-
-.sv-ranking-item--animate-item-adding {
-  animation: sv-animate-item-adding-keyframes $ranking-animation-duration;
-}
-
-@keyframes sv-animate-item-adding-keyframes {
-  0% {
-    height: 0px;
-    opacity: 0;
-  }
-
-  50% {
-    height: calcSize(6);
-    opacity: 0;
-  }
-
-  100% {
-    height: calcSize(6);
-    opacity: 1;
-  }
-}
-
 .sv-ranking-item:focus .sv-ranking-item__icon--hover {
   visibility: hidden;
 }
@@ -291,14 +249,45 @@
     justify-content: center;
     align-items: center;
   }
+}
 
-  .sv-ranking-item--animate-item-removing {
-    animation: sv-animate-item-opacity-keyframes $ranking-animation-duration;
-  }
+.sv-ranking-item--animate-item-removing {
+  --animation-height: #{calcSize(6)};
+  animation-name: moveIn, fadeIn;
+  animation-direction: reverse;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+  animation-duration: $ranking-move-out-duration, $ranking-fade-out-duration;
+  animation-delay: $ranking-move-out-delay, 0s;
+}
 
-  .sv-ranking-item--animate-item-adding {
-    animation: sv-animate-item-opacity-reverse-keyframes $ranking-animation-duration;
-  }
+.sv-ranking-item--animate-item-adding {
+  --animation-height: #{calcSize(6)};
+  animation-name: moveIn, fadeIn;
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+  animation-duration: $ranking-move-in-duration, $ranking-fade-in-duration;
+  animation-delay: 0s, $ranking-fade-in-delay;
+}
+
+
+.sv-ranking-item--animate-item-adding-empty {
+  --animation-height: #{calcSize(6)};
+  animation-name: fadeIn;
+  opacity: 0;
+  animation-timing-function: linear;
+  animation-duration: $ranking-fade-in-duration;
+  animation-delay: 0;
+}
+
+.sv-ranking-item--animate-item-removing-empty {
+  --animation-height: #{calcSize(6)};
+  animation-name: fadeIn;
+  animation-direction: reverse;
+  animation-timing-function: linear;
+  animation-duration: $ranking-fade-out-duration;
+  animation-delay: 0;
 }
 
 @keyframes sv-animate-item-opacity-reverse-keyframes {
@@ -397,6 +386,7 @@
 .sv-ranking--select-to-rank-horizontal .sv-ranking__container--to .sv-ranking-item {
   left: 0 !important;
   padding-left: 16px;
+
   .sv-ranking-item__ghost {
     left: initial;
   }
