--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -1,6 +1,7 @@
 @import "./blocks/mixins.scss";
 @import "../common-styles/common-styles.scss";
 
+@import "blocks/animations.scss";
 @import "blocks/sd-element.scss";
 @import "blocks/sd-question.scss";
 @import "blocks/sd-error.scss";
