--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -13,6 +13,7 @@
 .sd-question__content--support-container-queries {
   container-type: inline-size;
 }
+
 .sd-question--title-top>.sd-question__erbox--above-question {
   margin-bottom: calc(0.5 * var(--sd-base-vertical-padding));
 }
@@ -26,9 +27,11 @@
   margin-bottom: var(--sd-base-padding);
   border-radius: calcCornerRadius(1) calcCornerRadius(1) 0 0;
 }
+
 .sd-question--left>.sd-element__erbox--above-element {
   margin-bottom: 0;
 }
+
 .sd-element--with-frame.sd-question--left>.sd-element__erbox--above-element {
   margin-bottom: calc(1 * var(--sd-base-vertical-padding));
 }
@@ -70,6 +73,8 @@
 
   &.sd-question--error-bottom {
     padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
 
     &>.sd-question__content {
       margin-bottom: var(--sd-base-padding)
@@ -108,7 +113,8 @@
   flex: 1;
   margin-top: calc(0.25 * var(--sd-base-vertical-padding)) 0;
 }
-.sd-element--with-frame > .sd-question__content--left {
+
+.sd-element--with-frame>.sd-question__content--left {
   margin: 0;
 }
 
