Fixed #7925 - Buttons progress bar issues - semi transparent color

--- a/packages/survey-angular-ui/src/components/progress/buttons/progress.component.html
+++ b/packages/survey-angular-ui/src/components/progress/buttons/progress.component.html
@@ -29,6 +29,7 @@
           >
             {{ page.locNavigationDescription.renderedHtml }}
           </div>
+          <div [class]="survey.css.progressButtonsButton"><div [class]="survey.css.progressButtonsButtonBackground"></div><div [class]="survey.css.progressButtonsButtonContent"></div><span>{{model.getItemNumber(page)}}</span></div>
         </li>
       </ul>
     </div>
