--- a/src/defaultV2-theme/blocks/sd-progress-buttons.scss
+++ b/src/defaultV2-theme/blocks/sd-progress-buttons.scss
@@ -51,8 +51,8 @@
       display: block;
       content: "";
       height: calcSize(0.25);
-      background-color: $navigation;
-      // opacity: 0.5;
+      background-color: $foreground-dim-light;
+      opacity: 0.5;
       position: absolute;
       bottom: calcSize(1.125);
       // right: 50%;
@@ -61,15 +61,14 @@
       pointer-events: none;
     }
 
-    &:after {
+    .sd-progress-buttons__button {
+      position: relative;
       display: flex;
       content: attr(data-page-number);
       width: calcSize(0);
       height: calcSize(0);
       margin: calcSize(0.75);
       border: calcSize(0.5) solid transparent;
-      background-color: $navigation;
-      // opacity: 0.5;
       border-radius: 50%;
       align-self: center;
       z-index: 1;
@@ -78,38 +77,84 @@
       line-height: calcLineHeight(1);
       justify-content: center;
       color: $background-dim;
+
+      .sd-progress-buttons__button-background {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: calcSize(-0.5);
+        left: calcSize(-0.5);
+        background-color: $background-dim;
+        z-index: -2;
+        border: calcSize(0.5) solid $background-dim;
+        border-radius: 50%;
+      }
+
+      .sd-progress-buttons__button-content {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: calcSize(-0.5);
+        left: calcSize(-0.5);
+        background-color: $foreground-dim-light;
+        opacity: 0.5;
+        z-index: -1;
+        border: calcSize(0.5) solid transparent;
+        border-radius: 50%;
+      }
     }
   }
 
-  li:hover:after {
+  li:hover .sd-progress-buttons__button {
     color: $primary;
     padding: calcSize(0.25);
     margin: calcSize(0.25);
     border: calcSize(0.75) solid $primary;
     background-color: $primary-foreground;
+
+    .sd-progress-buttons__button-content {
+      top: calcSize(-0.75);
+      left: calcSize(-0.75);
+      border: calcSize(0.75) solid $primary;
+      background-color: $primary-foreground;
+      opacity: 1;
+    }
   }
 
   .sd-progress-buttons__list-element--passed {
     &:not(:first-child)>.sd-progress-buttons__connector {
       background-color: $primary;
+      opacity: 1;
     }
 
-    &:after {
+    .sd-progress-buttons__button {
       background-color: $primary;
+
+      .sd-progress-buttons__button-content {
+        background-color: $primary;
+        opacity: 1;
+      }
     }
   }
 
   .sd-progress-buttons__list-element--current {
     &:not(:first-child)>.sd-progress-buttons__connector {
       background-color: $primary;
+      opacity: 1;
     }
 
-    &:after {
+    .sd-progress-buttons__button {
       border: calcSize(0.5) solid $primary;
       background-color: $primary-foreground;
       color: $primary;
       padding: calcSize(0.25);
       margin: calcSize(0.5);
+
+      .sd-progress-buttons__button-content {
+        border: calcSize(0.5) solid $primary;
+        background-color: $primary-foreground;
+        opacity: 1;
+      }
     }
   }
 }
@@ -186,12 +231,12 @@
         width: calc(100% - 8px);
       }
 
-      &:after {
+      .sd-progress-buttons__button {
         width: calcSize(2);
         height: calcSize(2);
       }
 
-      &:hover:after {
+      &:hover .sd-progress-buttons__button {
         padding: calcSize(0.25);
       }
     }
