--- a/src/knockout/templates/question-paneldynamic.html
+++ b/src/knockout/templates/question-paneldynamic.html
@@ -11,7 +11,7 @@
     <!-- /ko -->
     <!-- ko if: question.koIsList() -->
       <!-- ko foreach: { data: question.panels } -->
-        <div data-bind="css: question.getPanelWrapperCss()">
+        <div data-bind="css: question.getPanelWrapperCss($data)">
           <!-- ko let: { question: $data } -->
             <!-- ko component: { name: survey.getElementWrapperComponentName(question), params: { componentData:  survey.getElementWrapperComponentData(question), templateData: { name: question.koElementType, data: question, afterRender: $parent.koPanelAfterRender } } } -->
             <!-- /ko -->
@@ -44,7 +44,7 @@
         <!-- /ko -->
       <!-- /ko -->
       <!-- ko if: question.koPanel() -->
-      <div data-bind="css: question.getPanelWrapperCss()">
+      <div data-bind="css: question.getPanelWrapperCss(question.koPanel())">
         <!-- ko let: { question: question.koPanel() } -->
           <!-- ko component: { name: question.survey.getElementWrapperComponentName(question), params: { componentData:  question.survey.getElementWrapperComponentData(question), templateData: { name: question.koElementType, data: question, afterRender: $parent.koPanelAfterRender } } } -->
           <!-- /ko -->
