--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -157,6 +157,13 @@
   text-overflow: ellipsis;
 }
 
+.sd-question--readonly .sd-dropdown_chevron-button use {
+  opacity: 0.24;
+}
+
+.sd-question--preview .sd-dropdown_chevron-button {
+  display: none;
+}
 .sv-dropdown-popup {
   .sd-list__item-body {
     @include useEditorFontSize;
