#6776 - fixed some v-tests

--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -151,10 +151,14 @@
   }
 }
 
-.sd-input--disabled .sv-string-viewer {
-  max-width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.sd-input--disabled,
+.sd-input--readonly,
+.sd-input--preview {
+  .sv-string-viewer {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .sd-question--readonly .sd-dropdown_chevron-button use {
