work for the https://github.com/surveyjs/survey-library/issues/6776 (checkbox group)

--- a/src/defaultV2-theme/blocks/sd-checkbox.scss
+++ b/src/defaultV2-theme/blocks/sd-checkbox.scss
@@ -24,3 +24,12 @@
 .sd-checkbox--checked .sd-checkbox__control:focus + .sd-checkbox__decorator .sd-checkbox__svg use {
   fill: $primary;
 }
+
+
+.sd-checkbox--checked.sd-checkbox--readonly .sd-checkbox__svg use {
+  fill: $foreground-dim;
+}
+
+.sd-checkbox--checked.sd-checkbox--preview .sd-checkbox__svg use{
+  fill: $foreground-dim;
+}
