--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -57,7 +57,9 @@
   height: calcSize(4);
 }
 
-.sv-ranking-item--disabled.sv-ranking-item--disabled {
+.sv-ranking-item--disabled.sv-ranking-item--disabled,
+.sv-ranking-item--readonly.sv-ranking-item--readonly,
+.sv-ranking-item--preview, .sv-ranking-item--preview {
   cursor: initial;
 
   .sv-ranking-item__icon-container.sv-ranking-item__icon-container {
@@ -123,6 +125,17 @@
 .sv-ranking-item--disabled .sv-ranking-item__text {
   color: $font-questiondescription-color;
   opacity: 0.25;
+}
+
+.sv-ranking-item--readonly {
+  .sv-ranking-item__index {
+    background-color: $background-dark;
+  }
+}
+.sv-ranking-item--preview {
+  .sv-ranking-item__index {
+    background-color: transparent;
+  }
 }
 
 .sv-ranking-item__ghost.sv-ranking-item__ghost {
